force-app/main/default/objects/ssot__LoyaltyTierBenefit__dlm/fields/ssot__rel_1697761184696_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1697761184696_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>LoyaltyTierBenefit_LoyaltyBenefitId__rel</label>
    <referenceTo>ssot__LoyaltyBenefit__dlm</referenceTo>
    <relationshipLabel>LoyaltyTierBenefit_LoyaltyBenefitId__rel</relationshipLabel>
    <relationshipName>rel_1697761184696_end</relationshipName>
    <type>Lookup</type>
</CustomField>