force-app/main/default/objects/ssot__LoyaltyTierBenefit__dlm/fields/ssot__rel_1697761184762_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1697761184762_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>LoyaltyTierBenefit_LoyaltyTierId_map_rel</label>
    <referenceTo>ssot__LoyaltyTier__dlm</referenceTo>
    <relationshipLabel>LoyaltyTierBenefit_LoyaltyTierId_map_rel</relationshipLabel>
    <relationshipName>rel_1697761184762_end</relationshipName>
    <type>Lookup</type>
</CustomField>