force-app/main/default/objects/ssot__LoyaltyTierBenefit__dlm/fields/ssot__rel_1697761185110_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1697761185110_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>LoyaltyTier_Id_map_LoyaltyTierBenefi_rel</label>
    <referenceTo>ssot__LoyaltyTier__dlm</referenceTo>
    <relationshipLabel>LoyaltyTier_Id_map_LoyaltyTierBenefi_rel</relationshipLabel>
    <relationshipName>rel_1697761185110_end</relationshipName>
    <type>Lookup</type>
</CustomField>